--- a/sass/master.scss
+++ b/sass/master.scss
@@ -30,10 +30,17 @@ img {
   article {
     margin: 2rem auto;
     width: 60%;
-    min-width: 500px;
+    max-width: 300px;
+    border-radius: 3px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+    p {
+      padding: 1rem;
+      margin: 0;
+    }
     header {
       position: relative;
       img {
+        border-radius: 3px 3px 0 0;
         width: 100%;
         display: flex;
       }
